<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="allClear">AC</string>
    <string name="plusMinus">+/-</string>
    <string name="percentage">%</string>
    <string name="divide">/</string>
    <string name="number_nine">9</string>
    <string name="number_eight">8</string>
    <string name="number_seven">7</string>
    <string name="multiply">*</string>
    <string name="number_six">6</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>
    <string name="subtract">-</string>
    <string name="number_three">3</string>
    <string name="number_two">2</string>
    <string name="number_one">1</string>
    <string name="plus">+</string>
    <string name="number_zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>